/**
 * VaxTrace Nigeria - OpenLMIS Integration Controller
 * 
 * This controller provides the API endpoints for integrating with OpenLMIS.
 * It acts as the "Data Orchestrator" between OpenLMIS and VaxTrace.
 * 
 * Features:
 * - Stock data fetching with caching
 * - Facility data synchronization
 * - Requisition tracking
 * - VVM status monitoring
 * - Delta sync for efficiency
 */

import { Controller, Get, Post, Put, Delete, Param, Query, Body, Logger } from '@nestjs/common';
import { OpenLMISService } from './openlmis.service';
import { CacheService } from '../cache/cache.service';
import { ProtobufService } from '../protobuf/protobuf.service';
import * as crypto from 'crypto';
import {
  IsOptional,
  IsString,
  IsBoolean,
  IsInt,
  IsUUID,
  IsEnum
} from 'class-validator';

// ============================================
// DTOs
// ============================================

class StockDataQueryDto {
  @ApiProperty({ description: 'LGA ID to filter by' })
  @IsOptional()
  @IsString()
  lgaId?: string;

  @ApiProperty({ description: 'State ID to filter by' })
  @IsOptional()
  @IsString()
  stateId?: string;

  @ApiProperty({ description: 'Facility ID to filter by' })
  @IsOptional()
  @IsString()
  facilityId?: string;

  @ApiProperty({ description: 'Vaccine code to filter by' })
  @IsOptional()
  @IsString()
  vaccineCode?: string;

  @ApiProperty({ description: 'Include historical data' })
  @IsOptional()
  @IsBoolean()
  includeHistorical?: boolean;

  @ApiProperty({ description: 'Number of days of history' })
  @IsOptional()
  @IsInt()
  daysHistory?: number;

  @ApiProperty({ description: 'Return Protobuf format' })
  @IsOptional()
  @IsBoolean()
  protobuf?: boolean;
}

class RequisitionUpdateDto {
  @ApiProperty({ description: 'Requisition ID' })
  @IsUUID()
  id: string;

  @ApiProperty({ description: 'Requisition status' })
  @IsEnum(['INITIATED', 'SUBMITTED', 'AUTHORIZED', 'APPROVED', 'RELEASED', 'SHIPPED', 'RECEIVED', 'REJECTED'])
  status: string;

  @ApiProperty({ description: 'Notes' })
  @IsOptional()
  @IsString()
  notes?: string;
}

// ============================================
// CONTROLLER
// ============================================

@Controller('v1/openlmis')
@ApiTags('OpenLMIS Integration')
export class OpenLMISController {
  private readonly logger = new Logger(OpenLMISController.name);

  constructor(
    private readonly openlmisService: OpenLMISService,
    private readonly cacheService: CacheService,
    private readonly protobufService: ProtobufService,
  ) {}

  // ============================================
  // STOCK DATA ENDPOINTS
  // ============================================

  /**
   * Get stock data from OpenLMIS
   * 
   * GET /api/v1/openlmis/stock
   * 
   * Query parameters:
   * - lgaId: Filter by LGA
   * - stateId: Filter by state
   * - facilityId: Filter by facility
   * - vaccineCode: Filter by vaccine
   * - includeHistorical: Include historical data
   * - daysHistory: Number of days of history
   * - protobuf: Return Protobuf format
   */
  @Get('stock')
  @ApiOperation({ summary: 'Get stock data from OpenLMIS' })
  @ApiResponse({ status: 200, description: 'Stock data retrieved successfully' })
  async getStockData(
    @Query() query: StockDataQueryDto,
  ) {
    this.logger.log(`Fetching stock data with query: ${JSON.stringify(query)}`);

    // Try to get from cache first
    const cacheKey = `vax:stock:${query.lgaId || 'all'}:${query.stateId || 'all'}:${query.facilityId || 'all'}:${query.vaccineCode || 'all'}`;
    const cached = await this.cacheService.get<any>(cacheKey);
    
    if (cached && !query.includeHistorical) {
      this.logger.debug(`Returning cached stock data for ${cacheKey}`);
      return {
        success: true,
        data: cached,
        meta: {
          timestamp: new Date().toISOString(),
          requestId: crypto.randomUUID(),
          cached: true,
        },
      };
    }

    // Fetch from OpenLMIS
    const stockData = await this.fetchStockFromOpenLMIS(query);

    // Cache the results
    if (!query.includeHistorical) {
      await this.cacheService.set(cacheKey, stockData, { ttl: 900 }); // 15 minutes
    }

    return {
      success: true,
      data: stockData,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
        cached: false,
      },
    };
  }

  /**
   * Get aggregated stock by state
   * 
   * GET /api/v1/openlmis/stock/aggregated
   */
  @Get('stock/aggregated')
  @ApiOperation({ summary: 'Get aggregated stock data by state' })
  async getAggregatedStock(
    @Query('stateId') stateId: string,
  ) {
    this.logger.log(`Fetching aggregated stock for state: ${stateId}`);

    // Check cache
    const cacheKey = `vax:stock:state:${stateId}`;
    const cached = await this.cacheService.get<any>(cacheKey);
    
    if (cached) {
      return {
        success: true,
        data: cached,
        meta: {
          timestamp: new Date().toISOString(),
          requestId: crypto.randomUUID(),
          cached: true,
        },
      };
    }

    // Fetch and aggregate data
    const aggregatedData = await this.fetchAggregatedStock(stateId);

    // Cache the results
    await this.cacheService.set(cacheKey, aggregatedData, { ttl: 900 });

    return {
      success: true,
      data: aggregatedData,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
        cached: false,
      },
    };
  }

  /**
   * Get national stock summary
   * 
   * GET /api/v1/openlmis/stock/national
   */
  @Get('stock/national')
  @ApiOperation({ summary: 'Get national stock summary' })
  async getNationalStock() {
    this.logger.log('Fetching national stock summary');

    // Check cache
    const cacheKey = 'vax:stock:national';
    const cached = await this.cacheService.get<any>(cacheKey);
    
    if (cached) {
      return {
        success: true,
        data: cached,
        meta: {
          timestamp: new Date().toISOString(),
          requestId: crypto.randomUUID(),
          cached: true,
        },
      };
    }

    // Fetch national summary
    const summary = await this.fetchNationalStockSummary();

    // Cache the results
    await this.cacheService.set(cacheKey, summary, { ttl: 1800 }); // 30 minutes

    return {
      success: true,
      data: summary,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
        cached: false,
      },
    };
  }

  // ============================================
  // FACILITY DATA ENDPOINTS
  // ============================================

  /**
   * Get facilities with their geospatial data
   * 
   * GET /api/v1/openlmis/facilities
   */
  @Get('facilities')
  @ApiOperation({ summary: 'Get facilities from OpenLMIS' })
  async getFacilities(
    @Query('stateId') stateId?: string,
    @Query('lgaId') lgaId?: string,
  ) {
    this.logger.log(`Fetching facilities for state: ${stateId}, LGA: ${lgaId}`);

    // Check cache
    const cacheKey = `vax:facilities:${stateId || 'all'}:${lgaId || 'all'}`;
    const cached = await this.cacheService.get<any>(cacheKey);
    
    if (cached) {
      return {
        success: true,
        data: cached,
        meta: {
          timestamp: new Date().toISOString(),
          requestId: crypto.randomUUID(),
          cached: true,
        },
      };
    }

    // Fetch facilities from OpenLMIS
    const facilities = await this.fetchFacilitiesFromOpenLMIS(stateId, lgaId);

    // Cache the results
    await this.cacheService.set(cacheKey, facilities, { ttl: 86400 }); // 24 hours for geo data

    return {
      success: true,
      data: facilities,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
        cached: false,
      },
    };
  }

  // ============================================
  // REQUISITION ENDPOINTS
  // ============================================

  /**
   * Get requisitions
   * 
   * GET /api/v1/openlmis/requisitions
   */
  @Get('requisitions')
  @ApiOperation({ summary: 'Get requisitions from OpenLMIS' })
  async getRequisitions(
    @Query('status') status?: string,
    @Query('facilityId') facilityId?: string,
  ) {
    this.logger.log(`Fetching requisitions with status: ${status}, facility: ${facilityId}`);

    // Fetch from OpenLMIS
    const requisitions = await this.fetchRequisitionsFromOpenLMIS(status, facilityId);

    return {
      success: true,
      data: requisitions,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
      },
    };
  }

  /**
   * Update requisition status
   * 
   * PUT /api/v1/openlmis/requisitions/:id
   */
  @Put('requisitions/:id')
  @ApiOperation({ summary: 'Update requisition status in OpenLMIS' })
  async updateRequisition(
    @Param('id') id: string,
    @Body() update: RequisitionUpdateDto,
  ) {
    this.logger.log(`Updating requisition ${id} to status: ${update.status}`);

    // Update in OpenLMIS
    const result = await this.updateRequisitionInOpenLMIS(id, update);

    // Invalidate cache
    await this.cacheService.del(`vax:requisition:${id}`);
    await this.cacheService.deletePattern('vax:requisitions:*');

    return {
      success: true,
      data: result,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
      },
    };
  }

  // ============================================
  // VVM STATUS ENDPOINTS
  // ============================================

  /**
   * Get VVM status for facilities
   * 
   * GET /api/v1/openlmis/vvm-status
   */
  @Get('vvm-status')
  @ApiOperation({ summary: 'Get VVM status from OpenLMIS' })
  async getVVMStatus(
    @Query('facilityId') facilityId?: string,
    @Query('stage') stage?: string,
  ) {
    this.logger.log(`Fetching VVM status for facility: ${facilityId}, stage: ${stage}`);

    // Fetch from OpenLMIS
    const vvmStatus = await this.fetchVVMStatusFromOpenLMIS(facilityId, stage);

    return {
      success: true,
      data: vvmStatus,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
      },
    };
  }

  // ============================================
  // SYNC ENDPOINTS
  // ============================================

  /**
   * Trigger delta sync with OpenLMIS
   * 
   * POST /api/v1/openlmis/sync
   */
  @Post('sync')
  @ApiOperation({ summary: 'Trigger delta sync with OpenLMIS' })
  async triggerSync(
    @Body() body: { lastSyncTimestamp?: number; entityTypes?: string[]; lgaId?: string; stateId?: string; },
  ) {
    this.logger.log(`Triggering delta sync with OpenLMIS: ${JSON.stringify(body)}`);

    // Perform delta sync
    const syncResult = await this.performDeltaSync(body);

    // Invalidate affected caches
    if (body.lgaId) {
      await this.cacheService.invalidateLGAStock(body.lgaId);
    }
    if (body.stateId) {
      await this.cacheService.invalidateStateStock(body.stateId);
    }

    return {
      success: true,
      data: syncResult,
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
      },
    };
  }

  /**
   * Get sync status
   * 
   * GET /api/v1/openlmis/sync/status
   */
  @Get('sync/status')
  @ApiOperation({ summary: 'Get sync status with OpenLMIS' })
  async getSyncStatus() {
    const lastSync = await this.getLastSyncTimestamp();
    const syncInProgress = await this.isSyncInProgress();

    return {
      success: true,
      data: {
        lastSync,
        syncInProgress,
        nextScheduledSync: lastSync ? new Date(lastSync.getTime() + 3600000).toISOString() : null, // 1 hour
      },
      meta: {
        timestamp: new Date().toISOString(),
        requestId: crypto.randomUUID(),
      },
    };
  }

  // ============================================
  // PRIVATE METHODS
  // ============================================

  private async fetchStockFromOpenLMIS(query: any): Promise<any[]> {
    // Implementation would call OpenLMIS API
    return [];
  }

  private async fetchAggregatedStock(stateId: string): Promise<any> {
    // Implementation would aggregate stock by state
    return {};
  }

  private async fetchNationalStockSummary(): Promise<any> {
    // Implementation would calculate national summary
    return {};
  }

  private async fetchFacilitiesFromOpenLMIS(stateId?: string, lgaId?: string): Promise<any[]> {
    // Implementation would fetch facilities from OpenLMIS Reference Data API
    return [];
  }

  private async fetchRequisitionsFromOpenLMIS(status?: string, facilityId?: string): Promise<any[]> {
    // Implementation would fetch requisitions from OpenLMIS
    return [];
  }

  private async updateRequisitionInOpenLMIS(id: string, update: any): Promise<any> {
    // Implementation would update requisition in OpenLMIS
    return {};
  }

  private async fetchVVMStatusFromOpenLMIS(facilityId?: string, stage?: string): Promise<any[]> {
    // Implementation would fetch VVM status from OpenLMIS
    return [];
  }

  private async performDeltaSync(body: any): Promise<any> {
    // Implementation would perform delta sync with OpenLMIS
    return {};
  }

  private async getLastSyncTimestamp(): Promise<Date | null> {
    // Implementation would get last sync timestamp from database
    return null;
  }

  private async isSyncInProgress(): Promise<boolean> {
    // Implementation would check if sync is currently running
    return false;
  }
}

// ============================================
// DECORATORS
// ============================================

function ApiProperty(options: any): Function {
  return (target: any, propertyKey: string) => {
    // Placeholder for @ApiModelProperty decorator
  };
}

function ApiResponse(options: any): Function {
  return (target: any, propertyKey: string) => {
    // Placeholder for @ApiResponse decorator
  };
}

function ApiTags(tags: string | string[]): Function {
  return (target: any) => {
    // Placeholder for @ApiTags decorator
  };
}

function ApiOperation(options: any): Function {
  return (target: any, propertyKey: string) => {
    // Placeholder for @ApiOperation decorator
  };
}

function ApiQuery(options: any): Function {
  return (target: any, propertyKey: string) => {
    // Placeholder for @ApiQuery decorator
  };
}

function UseGuards(...guards: any[]): Function {
  return (target: any, propertyKey: string) => {
    // Placeholder for @UseGuards decorator
  };
}
